水平滚动；进入可视窗口后播放动画

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
       const lang = navigator.language || navigator.userLanguage; // 獲取瀏覽器語言
       if (lang.startsWith('zh')) {
         // 如果語言是中文，跳轉到 zh/page1/index.html
-        window.location.href = 'zh/page1/';
+        // window.location.href = 'zh/page1/';
       } else {
         // 否則，跳轉到 en/page1/index.html
         window.location.href = 'en/page1/';
