--- a/src/pages/page2/index.html
+++ b/src/pages/page2/index.html
@@ -7,5 +7,23 @@
   </head>
   <body>
     <h1><%= config.welcomeMessage %>2</h1>
+    <div class="width-100vw height-100vh content" type="tabs">
+      <div class="btn-group" type="btnGroup">
+        <div type="btnGroupItem" select tabID="GI1">1</div>
+        <div type="btnGroupItem" tabID="GI2">2</div>
+        <div type="btnGroupItem" tabID="GI3">3</div>
+        <div type="btnGroupItem" tabID="GI4">4</div>
+        <span class="select"></span>
+        <!-- 遮罩 -->
+      </div>
+      <div type="tabsView">
+        <div type="tab" tabID="GI1" style="background-color: antiquewhite">
+          1
+        </div>
+        <div type="tab" tabID="GI2" style="background-color: aqua">2</div>
+        <div type="tab" tabID="GI3" style="background-color: aquamarine">3</div>
+        <div type="tab" tabID="GI4" style="background-color: burlywood">4</div>
+      </div>
+    </div>
   </body>
 </html>
