--- a/src/pages/page2/index.html
+++ b/src/pages/page2/index.html
@@ -25,5 +25,23 @@
         <div type="tab" tabID="GI4" style="background-color: burlywood">4</div>
       </div>
     </div>
+    <div class="width-100vw height-100vh content" type="tabs">
+      <div class="btn-group" type="btnGroup">
+        <div type="btnGroupItem" select tabID="GIa1">1</div>
+        <div type="btnGroupItem" tabID="GIa2">2</div>
+        <div type="btnGroupItem" tabID="GIa3">3</div>
+        <div type="btnGroupItem" tabID="GIa4">4</div>
+        <span class="select"></span>
+        <!-- 遮罩 -->
+      </div>
+      <div type="tabsView">
+        <div type="tab" tabID="GIa1" style="background-color: antiquewhite">
+         a1
+        </div>
+        <div type="tab" tabID="GIa2" style="background-color: aqua">a2</div>
+        <div type="tab" tabID="GIa3" style="background-color: aquamarine">a3</div>
+        <div type="tab" tabID="GIa4" style="background-color: burlywood">a4</div>
+      </div>
+    </div>
   </body>
 </html>
