添加注释；调整细节

--- a/src/pages/page2/index.html
+++ b/src/pages/page2/index.html
@@ -9,12 +9,11 @@
     <h1><%= config.welcomeMessage %>2</h1>
     <div class="width-100vw height-100vh content" type="tabs">
       <div class="btn-group" type="btnGroup">
-        <div type="btnGroupItem" select tabID="GI1">1</div>
+        <div type="btnGroupItem" tabID="GI1">1</div>
         <div type="btnGroupItem" tabID="GI2">2</div>
-        <div type="btnGroupItem" tabID="GI3">3</div>
+        <div type="btnGroupItem" tabID="GI3" select>3</div>
         <div type="btnGroupItem" tabID="GI4">4</div>
-        <span class="select"></span>
-        <!-- 遮罩 -->
+        <!-- 此处没有选中标记 -->
       </div>
       <div type="tabsView">
         <div type="tab" tabID="GI1" style="background-color: antiquewhite">
@@ -27,12 +26,11 @@
     </div>
     <div class="width-100vw height-100vh content" type="tabs">
       <div class="btn-group" type="btnGroup">
-        <div type="btnGroupItem" select tabID="GIa1">1</div>
-        <div type="btnGroupItem" tabID="GIa2">2</div>
+        <div type="btnGroupItem" tabID="GIa1">1</div>
+        <div type="btnGroupItem" tabID="GIa2" select>2</div>
         <div type="btnGroupItem" tabID="GIa3">3</div>
         <div type="btnGroupItem" tabID="GIa4">4</div>
         <span class="select"></span>
-        <!-- 遮罩 -->
       </div>
       <div type="tabsView">
         <div type="tab" tabID="GIa1" style="background-color: antiquewhite">
