--- a/src/pages/page2/index.html
+++ b/src/pages/page2/index.html
@@ -13,7 +13,7 @@
         <div type="btnGroupItem" tabID="GI2">2</div>
         <div type="btnGroupItem" tabID="GI3" select>3</div>
         <div type="btnGroupItem" tabID="GI4">4</div>
-        <!-- 此处没有选中标记 -->
+        <span class="select"></span> <!-- 此处标记可以不写，后续自动添加 -->
       </div>
       <div type="tabsView">
         <div type="tab" tabID="GI1" style="background-color: antiquewhite">
@@ -30,7 +30,7 @@
         <div type="btnGroupItem" tabID="GIa2" select>2</div>
         <div type="btnGroupItem" tabID="GIa3">3</div>
         <div type="btnGroupItem" tabID="GIa4">4</div>
-        <span class="select"></span>
+        <span class="select"></span> <!-- 此处标记可以不写，后续自动添加 -->
       </div>
       <div type="tabsView">
         <div type="tab" tabID="GIa1" style="background-color: antiquewhite">
