添加切换换页效果

--- a/src/pages/page2/index.html
+++ b/src/pages/page2/index.html
@@ -9,15 +9,16 @@
     <h1><%= config.welcomeMessage %>2</h1>
     <div
       class="width-100vw height-100vh content"
-      style="background-color: #ff9a9a;"
+      style="background-color: #ff9a9a"
       type="tabs"
       direction="Vertical"
+      animation="switch"
     >
       <div type="btnGroup">
-        <div type="btnGroupItem" tabID="GI1" select>1</div>
-        <div type="btnGroupItem" tabID="GI2">2</div>
-        <div type="btnGroupItem" tabID="GI3">3</div>
-        <div type="btnGroupItem" tabID="GI4">4</div>
+        <div class="group-btn" type="btnGroupItem" tabID="GI1" select>1</div>
+        <div class="group-btn" type="btnGroupItem" tabID="GI2">2</div>
+        <div class="group-btn" type="btnGroupItem" tabID="GI3">3</div>
+        <div class="group-btn" type="btnGroupItem" tabID="GI4">4</div>
       </div>
       <div type="tabsView">
         <div type="tab" tabID="GI1" style="background-color: antiquewhite">
@@ -30,15 +31,28 @@
     </div>
     <div
       class="width-100vw height-100vh content"
-      style="background-color: #d283ff;"
+      style="background-color: #d283ff"
       type="tabs"
       direction="Horizontal"
+      animation="row"
     >
       <div type="btnGroup">
-        <div type="btnGroupItem" tabID="GIa1">1</div>
-        <div type="btnGroupItem" tabID="GIa2" select>2</div>
-        <div type="btnGroupItem" tabID="GIa3">3</div>
-        <div type="btnGroupItem" tabID="GIa4">4</div>
+        <div class="group-btn" type="btnGroupItem" tabID="GIa1">
+          <div title>t1</div>
+          <div content>title 1</div>
+        </div>
+        <div class="group-btn" type="btnGroupItem" tabID="GIa2" select>
+          <div title>t2</div>
+          <div content>title 2</div>
+        </div>
+        <div class="group-btn" type="btnGroupItem" tabID="GIa3">
+          <div title>t3</div>
+          <div content>title 3</div>
+        </div>
+        <div class="group-btn" type="btnGroupItem" tabID="GIa4">
+          <div title>t4</div>
+          <div content>title 4</div>
+        </div>
         <span class="select"></span>
         <!-- 此处标记可以不写，后续自动添加 -->
       </div>
