tab上添加视频

--- a/src/pages/page2/index.html
+++ b/src/pages/page2/index.html
@@ -58,14 +58,16 @@
       </div>
       <div type="tabsView">
         <div type="tab" tabID="GIa1" style="background-color: antiquewhite">
-          a1
+          <video videoID="GIa1" src="<%= require('../../assets/videos/1.mp4') %>" muted poster></video>
         </div>
-        <div type="tab" tabID="GIa2" style="background-color: aqua">a2</div>
+        <div type="tab" tabID="GIa2" style="background-color: aqua">
+          <video videoID="GIa2" src="<%= require('../../assets/videos/2.mp4') %>" muted poster></video>
+        </div>
         <div type="tab" tabID="GIa3" style="background-color: aquamarine">
-          a3
+          <video videoID="GIa3" src="<%= require('../../assets/videos/3.mp4') %>" muted poster></video>
         </div>
         <div type="tab" tabID="GIa4" style="background-color: burlywood">
-          a4
+          <video videoID="GIa4" src="<%= require('../../assets/videos/4.mp4') %>" muted poster></video>
         </div>
       </div>
     </div>
