垂直按钮组 UI 动画 更新

--- a/src/pages/page2/index.html
+++ b/src/pages/page2/index.html
@@ -31,43 +31,85 @@
     </div>
     <div
       class="width-100vw height-100vh content"
-      style="background-color: #d283ff"
+      style="background-color: #000000"
       type="tabs"
       direction="Horizontal"
       animation="switch"
+      selecttag="false"
     >
       <div type="btnGroup">
-        <div class="group-btn" type="btnGroupItem" tabID="GIa1">
+        <li class="group-btn" type="btnGroupItem" tabID="GIa1">
           <div title>t1</div>
-          <div content>title 1</div>
-        </div>
-        <div class="group-btn" type="btnGroupItem" tabID="GIa2" select>
+          <div content>
+            title 1title 1title 1title 1title 1title 1title 1title 1title 1title
+            1title 1title 1title 1title 1title 1title 1title 1title 1title
+            1title 1title 1title 1title 1title 1title 1title 1title 1title
+            1title 1title 1
+          </div>
+        </li>
+        <li class="group-btn" type="btnGroupItem" tabID="GIa2" select>
           <div title>t2</div>
-          <div content>title 2</div>
-        </div>
-        <div class="group-btn" type="btnGroupItem" tabID="GIa3">
+          <div content>
+            title 2title 2title 2title 2title 2title 2title 2title 2title 2title
+            2title 2title 2title 2title 2title 2title 2title 2title 2title
+            2title 2title 2title 2title 2title 2title 2title 2title 2title
+            2title 2title 2title 2title 2title 2title 2title 2title 2title
+            2title 2
+          </div>
+        </li>
+        <li class="group-btn" type="btnGroupItem" tabID="GIa3">
           <div title>t3</div>
-          <div content>title 3</div>
-        </div>
-        <div class="group-btn" type="btnGroupItem" tabID="GIa4">
+          <div content>
+            title 3title 3title 3title 3title 3title 3title 3title 3title 3title
+            3title 3title 3title 3title 3title 3title 3title 3title 3title
+            3title 3title 3title 3title 3title 3title 3title 3title 3title
+            3title 3title 3title 3title 3title 3title 3title 3title 3title 3
+          </div>
+        </li>
+        <li class="group-btn" type="btnGroupItem" tabID="GIa4">
           <div title>t4</div>
-          <div content>title 4</div>
-        </div>
+          <div content>
+            title 4title 4title 4title 4title 4title 4title 4title 4title 4title
+            4title 4title 4title 4title 4title 4title 4title 4title 4title
+            4title 4title 4title 4title 4title 4title 4title 4title 4title
+            4title 4title 4title 4title 4title 4
+          </div>
+        </li>
         <span class="select"></span>
         <!-- 此处标记可以不写，后续自动添加 -->
       </div>
       <div type="tabsView">
-        <div type="tab" tabID="GIa1" style="background-color: antiquewhite">
-          <video videoID="GIa1" src="<%= require('../../assets/videos/1.mp4') %>" muted poster></video>
+        <div type="tab" tabID="GIa1">
+          <video
+            videoID="GIa1"
+            src="<%= require('../../assets/videos/1.mp4') %>"
+            muted
+            poster
+          ></video>
         </div>
-        <div type="tab" tabID="GIa2" style="background-color: aqua">
-          <video videoID="GIa2" src="<%= require('../../assets/videos/2.mp4') %>" muted poster></video>
+        <div type="tab" tabID="GIa2">
+          <video
+            videoID="GIa2"
+            src="<%= require('../../assets/videos/2.mp4') %>"
+            muted
+            poster
+          ></video>
         </div>
-        <div type="tab" tabID="GIa3" style="background-color: aquamarine">
-          <video videoID="GIa3" src="<%= require('../../assets/videos/3.mp4') %>" muted poster></video>
+        <div type="tab" tabID="GIa3">
+          <video
+            videoID="GIa3"
+            src="<%= require('../../assets/videos/3.mp4') %>"
+            muted
+            poster
+          ></video>
         </div>
-        <div type="tab" tabID="GIa4" style="background-color: burlywood">
-          <video videoID="GIa4" src="<%= require('../../assets/videos/4.mp4') %>" muted poster></video>
+        <div type="tab" tabID="GIa4">
+          <video
+            videoID="GIa4"
+            src="<%= require('../../assets/videos/4.mp4') %>"
+            muted
+            poster
+          ></video>
         </div>
       </div>
     </div>
