标签页宽度适应

--- a/src/pages/page2/index.html
+++ b/src/pages/page2/index.html
@@ -31,7 +31,7 @@
     </div>
     <div
       class="width-100vw height-100vh content"
-      style="background-color: #000000"
+      style="background-color: #000000; width: 50vw; margin-left: 25vw;"
       type="tabs"
       direction="Horizontal"
       animation="switch"
